// Vitest Snapshot v1

exports[`ItemList > should be sortable 1`] = `
<div>
  <ol
    class="space-y-1 pt-2 pb-1"
    data-testid="routine-card-items"
  >
    <li
      aria-describedby="DndDescribedBy-1"
      aria-disabled="false"
      aria-roledescription="sortable"
      class="flex h-7 w-full items-center justify-between space-x-2 pr-1"
      data-testid="routine-card-items-item"
      role="button"
      tabindex="0"
    >
      <button
        class="-ml-1.5 flex-grow-0 p-1.5"
        data-testid="routine-card-items-item-handle"
      >
        <svg
          class="h-4 w-4 text-neutral-500"
          fill="currentColor"
          viewBox="0 0 20 20"
          width="12"
        >
          <path
            d="M7 2a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 2zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 8zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 14zm6-8a2 2 0 1 0-.001-4.001A2 2 0 0 0 13 6zm0 2a2 2 0 1 0 .001 4.001A2 2 0 0 0 13 8zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 13 14z"
          />
        </svg>
      </button>
      <div
        class="flex w-full items-center justify-between space-x-3"
      >
        <label
          class="flex-1 truncate font-medium text-neutral-700"
          for="routine-1-item-1"
        >
          Item 1
        </label>
        <input
          aria-checked="false"
          class="h-5 w-5 rounded-full border-red-300 text-red-600 focus:ring-red-500"
          id="routine-1-item-1"
          name="routine-1-item-1"
          type="checkbox"
        />
      </div>
    </li>
    <li
      aria-describedby="DndDescribedBy-1"
      aria-disabled="false"
      aria-roledescription="sortable"
      class="flex h-7 w-full items-center justify-between space-x-2 pr-1"
      data-testid="routine-card-items-item"
      role="button"
      tabindex="0"
    >
      <button
        class="-ml-1.5 flex-grow-0 p-1.5"
        data-testid="routine-card-items-item-handle"
      >
        <svg
          class="h-4 w-4 text-neutral-500"
          fill="currentColor"
          viewBox="0 0 20 20"
          width="12"
        >
          <path
            d="M7 2a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 2zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 8zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 14zm6-8a2 2 0 1 0-.001-4.001A2 2 0 0 0 13 6zm0 2a2 2 0 1 0 .001 4.001A2 2 0 0 0 13 8zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 13 14z"
          />
        </svg>
      </button>
      <div
        class="flex w-full items-center justify-between space-x-3"
      >
        <label
          class="flex-1 truncate font-medium text-neutral-700"
          for="routine-1-item-2"
        >
          Item 2
        </label>
        <input
          aria-checked="false"
          class="h-5 w-5 rounded-full border-red-300 text-red-600 focus:ring-red-500"
          id="routine-1-item-2"
          name="routine-1-item-2"
          type="checkbox"
        />
      </div>
    </li>
  </ol>
  <div
    id="DndDescribedBy-1"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-1"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;

exports[`ItemList > should render successfully 1`] = `
<div>
  <ol
    class="space-y-1 pt-2 pb-1"
    data-testid="routine-card-items"
  >
    <li
      aria-describedby="DndDescribedBy-0"
      aria-disabled="false"
      aria-roledescription="sortable"
      class="flex h-7 w-full items-center justify-between space-x-2 pr-1"
      data-testid="routine-card-items-item"
      role="button"
      tabindex="0"
    >
      <div
        class="flex w-full items-center justify-between space-x-3"
      >
        <label
          class="flex-1 truncate font-medium text-neutral-700"
          for="routine-1-item-1"
        >
          Item 1
        </label>
        <input
          aria-checked="false"
          class="h-5 w-5 rounded-full border-red-300 text-red-600 focus:ring-red-500"
          id="routine-1-item-1"
          name="routine-1-item-1"
          type="checkbox"
        />
      </div>
    </li>
  </ol>
  <div
    id="DndDescribedBy-0"
    style="display: none;"
  >
    
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
  </div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;
